# AST-Compiler

./: .gitignore  README.md  ast  example.py  example.rs  pyproject.toml
examples/: bookstore.py  inventory.py
examples/synth/: bank.py  cache.py  counter.rs  events.py  graph.py  scoreboard.rs  stack.py  tasks.py  vectors.py  wallet.rs
src/: cli.py
src/generators/: __init__.py  _skeleton_gen.py  c_gen.py  go_gen.py  java_gen.py  javascript_gen.py  kotlin_gen.py  python_gen.py  rust_gen.py  swift_gen.py  ts_gen.py  zig_gen.py
src/harness/: __init__.py  editor.py  skeleton.py
src/optimizer/: __init__.py  passes.py
src/parsers/: __init__.py  _skeleton_parser.py  c_parser.py  go_parser.py  java_parser.py  javascript_parser.py  kotlin_parser.py  python_parser.py  rust_parser.py  swift_parser.py  ts_parser.py  zig_parser.py
src/unified_ast/: __init__.py  expr.py  minify.py  nodes.py  sexpr.py  types.py
tests/: test_cross_language.py  test_optimizer.py  test_python_roundtrip.py  test_rust_roundtrip.py  test_token_thrift.py  test_ts_roundtrip.py
tests/fixtures/: sample.py  sample.rs  sample.ts
training/: agent.py  agent_mlx.py  benchmark.py  benchmark_generalization.py  benchmark_rust.py  dataset.py  executor.py  generate.py  generate_targeted.py  inference.py  mlx_export.py  synth.py  system_prompt.py  tasks.py  tasks_targeted.py  train.py  train_mlx.py
